2006-06-14  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/faq-ja.tex:  Japanese translation of faq.tex

	* NEWS docs/Makefile.in:  Include faq-ja.tex in list of distributed
	files, and in NEWS.

2006-06-13  Daniel Sebald  <daniel.sebald@ieee.org>

	* demo/stat.inc: Overhaul of routines to add variable arguments,
	range checking and verify integer when appropriate.  The significant
	change is forcing some input vars to be an integer, rather than casting
	them to int() in the formulae.  (There are proper plot styles like
	"steps" to work with discrete r.v.s.)

	* demo/prob.dem: Modified the discrete r.v. examples to look more like
	a mass function or scaled impulses.  More varied examples to show
	various plotting features.

	* demo/prob2.dem demo/random.dem: Add input variables to p.d.f. and
	c.d.f. functions.  Added new Maxwell demo to random.dem.

	* docs/gnuplot.doc: Added adjective "normalized" to igamma()

2006-06-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Move export selection flags outside the the
	USE_MOUSE conditional code.  Bug #1505704

	* src/term_api.h: DEFAULT_LP_STYLE_TYPE to lt -1 (makes arrows
	default to black rather than red).
	

2006-06-13  Daniel Sebald  <daniel.sebald@ieee.org>

	* configure.in src/Makefile.am src/makefile.awc src/makefile.all:
	Add a configuration mechanism for including binary.c in list of
	gnuplot sources when appropriate.

	* src/bin_hook.c:  Remove from source tree.

2006-06-13  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/win/wtext.c:
	* src/win/wgraph.c:
	* src/wxterminal/wxt_gui.cpp:
	* src/wxterminal/wxt_gui.h:
	* src/wxterminal/wxt_term.h:
	Fix failures when compiling the wxWidgets terminal with
	--disable-mouse, by putting more code and declarations inside #ifdef
	USE_MOUSE ... #endif

2006-06-12  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in:  Move options marked EXPERIMENTAL to the end of the
	configuration summary printout.  Remove EXPERIMENTAL label from 